# Advanced-CPP-and-Modern-Design

./: .gitignore  README.md
Level 1/: CMakeLists.txt
Level 1/Section 1.1/Exercise 1/: main.cpp
Level 1/src/Section 1.2/Exercise 1/: main.cpp
Level 1/src/Section 1.2/Exercise 2/: main.cpp
Level 1/src/Section 1.2/Exercise 3/: main.cpp
Level 1/src/Section 1.3/Exercise 1/: Utils.cpp  Utils.hpp
Level 1/src/Section 1.3/Exercise 2/: Shape.hpp  Utils.cpp
Level 1/src/Section 1.4/Exercise 1/: Utils.hpp  main.cpp
Level 1/src/Section 1.4/Exercise 3/: main.cpp
Level 1/src/Section 1.4/Exercise 4/: Circle.hpp  Shape.hpp  main.cpp
Level 1/src/Section 1.4/Exercise 5/: main.cpp
Level 1/src/Section 1.5/Exercise 4/: main.cpp
Level 1/src/Section 1.5/Exercise 5/: Circle.hpp  Console.hpp  ConsoleBuilder.cpp  ConsoleBuilder.hpp  IODevice.hpp  Line.hpp  Monitor.cpp  Monitor.hpp  MonitorBuilder.cpp  main.cpp
Level 1/src/Section 1.6/Exercise 1/: Base.hpp  Derived2.hpp  main.cpp
Level 1/src/Section 1.6/Exercise 2/: TmpClass.cpp  main.cpp
Level 1/src/Section 1.6/Exercise 3/: Point.hpp  S.hpp
Level 1/src/Section 1.6/Exercise 4/: Client.hpp  ClientUsingAlias.hpp  Storage.hpp  main.cpp
Level 2/: CMakeLists.txt
Level 2/src/Section 2.1/Exercise 1/: main.cpp
Level 2/src/Section 2.1/Exercise 2/: main.cpp
Level 2/src/Section 2.1/Exercise 3/: Base.hpp  Point.hpp  Shape.hpp  main.cpp
Level 2/src/Section 2.1/Exercise 4/: Point.hpp  Shape.hpp  main.cpp
Level 2/src/Section 2.2/Exercise 1/: Numerics.cpp  Numerics.hpp  main.cpp
Level 2/src/Section 2.2/Exercise 2/: main.cpp
Level 2/src/Section 2.2/Exercise 3/: main.cpp
Level 2/src/Section 2.3/Exercise 1/: main.cpp
Level 2/src/Section 2.3/Exercise 3/: main.cpp
Level 2/src/Section 2.3/Exercise 4/: main.cpp
Level 2/src/Section 2.3/Exericse 2/: main.cpp
Level 2/src/Section 2.4/Exercise 1/: main.cpp
Level 2/src/Section 2.4/Exercise 2/: C1.hpp  C2.hpp  Point.hpp  main.cpp
Level 2/src/Section 2.4/Exercise 3/: Base.hpp  main.cpp
Level 2/src/Section 2.4/Exercise 4/: Derived.hpp  main.cpp
Level 2/src/Section 2.4/Exercise 5/: main.cpp
Level 2/src/Section 2.4/Exercise 6/: main.cpp
Level 2/src/Section 2.5 and 2.6/Exercise 1/: main.cpp
Level 2/src/Section 2.5 and 2.6/Exercise 2/: main.cpp
Level 2/src/Section 2.5 and 2.6/Exercise 3/: main.cpp
Level 2/src/Section 2.7/Exercise 1/: main.cpp
Level 2/src/Section 2.7/Exercise 2/: main.cpp
Level 2/src/Section 2.7/Exercise 3/: main.cpp
Level 2/src/Section 2.7/Exercise 4/: main.cpp
Level 2/src/Section 2.7/Exercise 5/: main.cpp
Level 2/src/Section 2.8/Exercise 1/: main.cpp
Level 2/src/Section 2.8/Exercise 2/: main.cpp
Level 2/src/Section 2.8/Exercise 3/: main.cpp
Level 2/src/Section 2.8/Exercise 4/: main.cpp
Level 2/src/Section 2.8/Exercise 5/: BitMatrix.cpp  BitMatrix.hpp  main.cpp
Level 3/: CMakeLists.txt
Level 3/src/Section 3.1/Exercise 1A/: main.cpp
Level 3/src/Section 3.1/Exercise 1B/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.1A/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.1B/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.1C_and_D/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.1E_and_F/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.2A/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.2B/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.2C/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.3A/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.3C/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.3D/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.3E/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.3F/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.3G/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1.4/: ConcurrentQueue.cpp  ConcurrentQueue.hpp  Consumer.cpp  Consumer.hpp  Producer.cpp  Producer.hpp  main.cpp
Level 3/src/Section 3.1/Exercise 3.1.5/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1C_and_D/: main.cpp
Level 3/src/Section 3.1/Exercise 3.1E_and_F/: main.cpp
Level 3/src/Section 3.2/: main.cpp
Level 3/src/Section 3.2/Exercise 1/: main.cpp
Level 3/src/Section 3.2/Exercise 2B/: main.cpp
Level 3/src/Section 3.2/Exercise 2C/: main.cpp
Level 3/src/Section 3.2/Exercise 3/: ActiveObject.cpp  main.cpp
Level 3/src/Section 3.2/Exercise 5/: Barber.hpp  ConcurrentQueue.cpp  ConcurrentQueue.hpp  Customer.cpp
Level 3/src/Section 3.2_3.3/Exercise 1/: main.cpp
Level 3/src/Section 3.2_3.3/Exercise 2/: main.cpp
Level 3/src/Section 3.2_3.3/Exercise 3/: ActiveObject.hpp
Level 3/src/Section 3.2_3.3/Exercise 4/: main.cpp
Level 3/src/Section 3.2_3.3/Exercise 5/: Barber.cpp  ConcurrentQueue.cpp  Customer.hpp  main.cpp
Level 3/src/Section 3.3/Exercise 3.3C/: main.cpp
Level 3/src/Section 3.3/Exercise 3.3D/: main.cpp
Level 3/src/Section 3.3/Exercise 3.3E/: main.cpp
Level 3/src/Section 3.3/Exercise 3.3G/: main.cpp
Level 3/src/Section 3.4/Exercise 1/: main.cpp
Level 3/src/Section 3.4/Exercise 2/: main.cpp
Level 3/src/Section 3.4/Exercise 3/: main.cpp
Level 3/src/Section 3.4/Exercise 4/: main.cpp
Level 4/src/: CMakeLists.txt
Level 5/src/: CMakeLists.txt
Level 6/src/: CMakeLists.txt
Level 6/src/Section 6.5/: Account.hpp  NoAccessException.cpp  NoAccessException.hpp  NoFundsException.cpp  ProtectedAccount.cpp  ProtectedAccount.hpp  RealAccount.hpp  main.cpp
Level 7/src/: CMakeLists.txt
Level 7/src/Exercise 1/: Circle.cpp  ConsoleShapeFactory.cpp  ConsoleShapeFactory.hpp  Point.cpp  Point.hpp  ShapeFactory.hpp  main.cpp
Level 7/src/Exercise 2/: Circle.cpp  Circle.hpp  ConsoleShapeFactory.cpp  ConsoleShapeFactory.hpp  Line.cpp  Line.hpp  NewShapeFactory.cpp  NewShapeFactory.hpp  Point.cpp  Point.hpp  main.cpp
Level 7/src/Exercise 3/: Circle.cpp  Circle.hpp  ConsoleShapeFactory.cpp  ConsoleShapeFactory.hpp  Line.cpp  Line.hpp  Point.cpp  Point.hpp  PolyLine.cpp  PolyLine.hpp  Shape.hpp  ShapeComposite.cpp  ShapeComposite.hpp  ShapeFactory.cpp  ShapeFactory.hpp  main.cpp
Level 7/src/Exercise 4/: TmpProcessor.hpp  main.cpp
Level 7/src/Exercise 7/: FeedHandler.hpp  Quote.hpp  Trade.hpp  main.cpp
(+297 files in other folders)
